2011-08-07 Jan Gehring <jan.gehring, gmail.com> (0.12.99.0)
  * added function to update package database
  * lizenz aenderung auf GPLv3

2011-07-23 Jan Gehring <jan.gehring, gmail.com> (0.12.0)
  * allow array refs for Pkg::remove
  * register every task as a sub if not in main package
  * use lsb_release if available as default to detect operating system/version
  * added sudo command
  * allow to manage multiple services at once
  * added possibility to add and remove services from runlevels
  * added iptables module for basic iptables commands
  * added cloud layer and support for amazon ec2 instances

2011-07-26 Jan Gehring <jan.gehring, gmail.com> (0.11.1)
  * fixed output of netstat (reported by Thomas Biege)
  * fixed inclusion of some modules in Run.pm that causes errors under 
    some circumstances (reported by Thomas Biege)

2011-07-22 Jan Gehring <jan.gehring, gmail.com> (0.11.0)
  * added lvm module
  * added lvm to inventory
  * fixed <OUT OF SPEC> inventory string
  * fixed multiplicator for GB and TB
  * added order key to selects
  * added support for hpacucli
  * added centos 6 support

2011-07-17 Jan Gehring <jan.gehring, gmail.com> (0.10.1)
  * fixed db disconnect on forks
  * fixed some typos

2011-07-12 Jan Gehring <jan.gehring, gmail.com> (0.10.0)
  * added network module for route, default gateway and netstat
  * added mount and umount function
  * added cron module
  * added more information (basic system information) to the inventor function
  * added installed_packages function to get all the installed packages

2011-07-03 Jan Gehring <jan.gehring, gmail.com> (0.9.0)
  * register tasks as function if possible
  * add "lib" to INC if exists
  * added function get_operating_system
  * added transactions
  * deprecated "package file =>"
  * added hal module to access hardware information detected by hal
  * added dmidecode module to access bios information
  * added inventory function "inventor"