@@ -1,6 +1,7 @@
 2011-08-07 Jan Gehring <jan.gehring, gmail.com> (0.12.99.0)
   * added function to update package database
   * lizenz aenderung auf GPLv3
+  * added an alias for unlink (rm)
 
 2011-07-23 Jan Gehring <jan.gehring, gmail.com> (0.12.0)
   * allow array refs for Pkg::remove
